--- a/.github/workflows/cukectrl.yml
+++ b/.github/workflows/cukectrl.yml
@@ -1,39 +1,34 @@
-name: Build and Push Docker Image
+name: main
 
 on:
   push:
-    branches:
-      - main
+    branches: ["main"]
   workflow_dispatch:
 
 jobs:
-  build-and-push:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the repository
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      # Step 2: Log in to GitHub Container Registry
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v2
+      - uses: actions/cache@v4
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
+      - name: Build the Docker image
+        id: build-docker-image
+        run: |
+          docker buildx build . \
+            --tag ghcr.io/miuzaki/cukectrl
 
-      # Step 3: Set up Docker Buildx (optional but recommended for multi-platform builds)
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+      - name: Login to GHCR
+        run: echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
-      # Step 4: Build and push the Docker image
-      - name: Build and Push Docker Image
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: |
-            ghcr.io/miuzaki/cukectrl:latest
-            ghcr.io/miuzaki/cukectrl:${{ github.sha }}
+      - name: Push Docker Image
+        run: |
+          docker push ghcr.io/miuzaki/cukectrl
